# mbox

./: .flake8  .gitignore  .markdownlint.rb  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  requirements_locked.txt  sample_config.ini  sample_ytdl_output.py  task-definition.json  webhook_messenger.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: refactor.md  workflow-enhancement.md
.github/workflows/: aws.yml  python-app.yml
cogs/: event_listener.py  messenger.py  music_controller.py  music_controller_listeners.py  slash_commands.py  state_manager.py
src/: auth.py  command_handler.py  config.py  constants.py  parser.py  preinitialization.py  profile.py  reporter.py  search.py
src/commander/: EmbedFactory.py  messenger.py
src/commander/element/: Button.py  ChatEmbed.py  EventWatcher.py  LyricsEmbed.py  PlayerEmbed.py  QueueEmbed.py  (+2 more)
src/element/: MusicBoxContext.py  context.py  database.py  dynamodb.py  profile.py
src/lib/: dynamodb.py  music_box_webhook.py
src/music/: lyrics.py  player.py
tasks/: constants.py  messenger.py  parser.py  player.py  preinitialization.py  profile.py  reporter.py
tasks/commander/: messenger.py
tasks/music/: player.py
test/: samples.py  test_auth.py
test/cogs/: test_slash_commands.py
test/element/: test_MusicBoxContext.py  test_context.py
tests/integration/: conftest.py  test_main.py
tests/unit/: conftest.py  test_LyricsEmbed.py  test_auth.py  test_database.py  test_search.py
(+13 files in other folders)
